MODON MRE BPDEV/force-app/main/default/objects/Sales_Order_Sub_Status_Meta_Data__mdt/Sales_Order_Sub_Status_Meta_Data__mdt.object-meta.xml
<CustomObject>
    <label>Sales Order Sub Status Meta Data</label>
    <pluralLabel>Sales Order Sub Status Meta Data</pluralLabel>
</CustomObject>