MODON MRE BPDEV/force-app/main/default/objects/Sales_Order_Sub_Status_Meta_Data__mdt/fields/Alert_Message__c.field-meta.xml
<CustomField>
    <fullName>Alert_Message__c</fullName>
    <label>Alert Message</label>
    <type>TextArea</type>
</CustomField>