MODON MRE BPDEV/force-app/main/default/objects/Sales_Order_Sub_Status_Meta_Data__mdt/fields/IsDefaultStatus__c.field-meta.xml
<CustomField>
    <fullName>IsDefaultStatus__c</fullName>
    <defaultValue>false</defaultValue>
    <label>IsDefaultStatus</label>
    <type>Checkbox</type>
</CustomField>