MODON MRE BPDEV/force-app/main/default/objects/Sales_Order_Sub_Status_Meta_Data__mdt/fields/Next_Sub_Status__c.field-meta.xml
<CustomField>
    <fullName>Next_Sub_Status__c</fullName>
    <label>Next Sub Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Pending with Sales</fullName>
                <default>true</default>
                <label>Pending with Sales</label>
            </value>
            <value>
                <fullName>Down Payment Collected</fullName>
            </value>
            <value>
                <fullName>ADM + Dari Fee Collected</fullName>
            </value>
            <value>
                <fullName>Reservation Form Generated</fullName>
            </value>
            <value>
                <fullName>Reservation Form Signed</fullName>
            </value>
            <value>
                <fullName>Broker Form Generated</fullName>
            </value>
            <value>
                <fullName>Broker Form Signed</fullName>
            </value>
            <value>
                <fullName>Pending With Sales.</fullName>
            </value>
            <value>
                <fullName>Pending With Sales Operation</fullName>
            </value>
            <value>
                <fullName>Document Checklist Verified By - Sales Operation</fullName>
            </value>
            <value>
                <fullName>SPA In-Progress</fullName>
            </value>
            <value>
                <fullName>Signed SPA (Customer)</fullName>
            </value>
            <value>
                <fullName>Document Checklist Verified By - Customer Management</fullName>
            </value>
            <value>
                <fullName>Signed SPA (Modon)</fullName>
            </value>
            <value>
                <fullName>Under Finance Verification</fullName>
            </value>
            <value>
                <fullName>Booking Cancellation</fullName>
            </value>
            <value>
                <fullName>Legal Cancellation</fullName>
            </value>
            <value>
                <fullName>Mutual Cancellation</fullName>
            </value>
            <value>
                <fullName>System Cancelled</fullName>
            </value>
            <value>
                <fullName>Completed</fullName>
            </value>
            <value>
                <fullName>Pending with CM</fullName>
            </value>
            <value>
                <fullName>SPA In Progress</fullName>
            </value>
            <value>
                <fullName>SPA Signed (Customer)</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>