MODON MRE BPDEV/force-app/main/default/objects/Sales_Order_Sub_Status_Meta_Data__mdt/fields/Owner_Name__c.field-meta.xml
<CustomField>
    <fullName>Owner_Name__c</fullName>
    <label>Owner Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>