MODON MRE BPDEV/force-app/main/default/objects/Sales_Order_Sub_Status_Meta_Data__mdt/fields/Sales_Journey_Flow__c.field-meta.xml
<CustomField>
    <fullName>Sales_Journey_Flow__c</fullName>
    <label>Sales Journey Flow</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Reservation Without Broker Form</fullName>
                <default>true</default>
                <label>Reservation Without Broker Form</label>
            </value>
            <value>
                <fullName>Reservation With Broker Form</fullName>
            </value>
            <value>
                <fullName>SPA Without Broker Form</fullName>
            </value>
            <value>
                <fullName>SPA With Broker Form</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>