MODON MRE BPDEV/force-app/main/default/objects/Sales_Order_Sub_Status_Meta_Data__mdt/fields/SLA_Hours__c.field-meta.xml
<CustomField>
    <fullName>SLA_Hours__c</fullName>
    <label>SLA Hours</label>
    <precision>7</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>